# hmt-frontend-solidity

./: CONTRIBUTING.md  Cargo.toml  README.md  hmt-package.toml  justfile
manifests/: index.toml  release-v0.1.0.toml  release-v0.1.1.toml  release-v0.1.10.toml  release-v0.1.2.toml  release-v0.1.3.toml  release-v0.1.4.toml  release-v0.1.5.toml  release-v0.1.6.toml  release-v0.1.7.toml  release-v0.1.8.toml  release-v0.1.9.toml  release-v0.2.0.toml  release-v0.3.0.toml  release-v0.4.0.toml  release-v0.5.0.toml  release-v0.5.1.toml  release-v0.5.10.toml  release-v0.5.11.toml  release-v0.5.12.toml  release-v0.5.2.toml  release-v0.5.3.toml  release-v0.5.4.toml  release-v0.5.5.toml  release-v0.5.6.toml  release-v0.5.7.toml  release-v0.5.8.toml  release-v0.5.9.toml  release-v0.6.0.toml  release-v0.6.1.toml  release-v0.6.10.toml  release-v0.6.2.toml  release-v0.6.3.toml  release-v0.6.4.toml  release-v0.6.5.toml  release-v0.6.6.toml  release-v0.6.7.toml  release-v0.6.8.toml  release-v0.6.9.toml
src/: ast.rs  codegen.rs  diagnostics.rs  emit.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  token.rs  visitor.rs
src/helpers/: fmt.rs  loc.rs  mod.rs  num.rs  ord.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  grammar.lalrpop  mod.rs  visitor.rs
src/semantic/: analyzer.rs  ast.rs  collector.rs  context.rs  contract.rs  eval.rs  file.rs  function.rs  import.rs  mod.rs  mutability.rs  pragma.rs  semicolon.rs  symtable.rs  tag.rs  types.rs  using.rs  variable.rs  visitor.rs
src/semantic/expression/: constructor.rs  mod.rs  resolve_expression.rs  retrieve_type.rs  strings.rs
tests/: common.rs  contract.rs  function.rs  pragma.rs  statement.rs  variable.rs
