[package]
name = "hmt-frontend-solidity"
description = "Parsing the Solidity source code and generating the Cranelift IR"
version = "0.5.3"
edition = "2021"

[[bin]]
name = "hmt-frontend-solidity"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
ariadne = { version = "0.5.1", features = ["auto-color"] }
bitflags = "2.9.4"
clap = { version = "4.5.47", features = ["derive", "env"] }
cranelift = { version = "0.123.1", features = ["module", "object"] }
indexmap = "2.11.3"
itertools = "0.14.0"
lalrpop-util = "0.22.2"
logos = "0.15.1"
normalize-path = "0.2.1"
num-bigint = "0.4.6"
num-rational = "0.4.2"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
target-lexicon = "0.13.3"
thiserror = "2.0.16"

[build-dependencies]
lalrpop = "0.22.2"

[features]
default = []
serde = ["dep:serde"]
