[package]
name = "hmt-frontend-solidity"
description = "Parsing the Solidity source code and generating the Cranelift IR"
version = "0.6.1"
edition = "2021"

[[bin]]
name = "hmt-frontend-solidity"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
ariadne = { version = "0.6", features = ["auto-color"] }
bitflags = "2.11"
clap = { version = "4.5", features = ["derive", "env"] }
cranelift = { version = "0.129", features = ["module", "object"] }
indexmap = "2.13"
itertools = "0.14"
lalrpop-util = "0.23"
logos = "0.16"
normalize-path = "0.2"
num-bigint = "0.4"
num-rational = "0.4"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.28", features = ["derive"] }
target-lexicon = "0.13"
thiserror = "2.0"

[build-dependencies]
lalrpop = "0.23"

[features]
default = []
serde = ["dep:serde"]
